@@ -70,6 +70,46 @@ import|;
 end_import
 begin_import
 import|import
+name|com
+operator|.
+name|carrotsearch
+operator|.
+name|ant
+operator|.
+name|tasks
+operator|.
+name|junit4
+operator|.
+name|dependencies
+operator|.
+name|com
+operator|.
+name|google
+operator|.
+name|common
+operator|.
+name|collect
+operator|.
+name|ImmutableMap
+import|;
+end_import
+begin_import
+import|import
+name|jdk
+operator|.
+name|nashorn
+operator|.
+name|internal
+operator|.
+name|ir
+operator|.
+name|annotations
+operator|.
+name|Immutable
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -718,6 +758,173 @@ argument_list|,
 name|FORBIDDEN
 argument_list|)
 expr_stmt|;
+name|Map
+name|rules
+init|=
+operator|(
+name|Map
+operator|)
+name|Utils
+operator|.
+name|fromJSONString
+argument_list|(
+name|permissions
+argument_list|)
+decl_stmt|;
+operator|(
+operator|(
+name|Map
+operator|)
+name|rules
+operator|.
+name|get
+argument_list|(
+literal|"user-role"
+argument_list|)
+operator|)
+operator|.
+name|put
+argument_list|(
+literal|"cio"
+argument_list|,
+literal|"su"
+argument_list|)
+expr_stmt|;
+operator|(
+operator|(
+name|List
+operator|)
+name|rules
+operator|.
+name|get
+argument_list|(
+literal|"permissions"
+argument_list|)
+operator|)
+operator|.
+name|add
+argument_list|(
+name|makeMap
+argument_list|(
+literal|"name"
+argument_list|,
+literal|"all"
+argument_list|,
+literal|"role"
+argument_list|,
+literal|"su"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|checkRules
+argument_list|(
+name|makeMap
+argument_list|(
+literal|"resource"
+argument_list|,
+literal|"/replication"
+argument_list|,
+literal|"httpMethod"
+argument_list|,
+literal|"POST"
+argument_list|,
+literal|"userPrincipal"
+argument_list|,
+literal|"tim"
+argument_list|,
+literal|"collectionRequests"
+argument_list|,
+name|singletonList
+argument_list|(
+operator|new
+name|CollectionRequest
+argument_list|(
+literal|"mycoll"
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|,
+name|FORBIDDEN
+argument_list|,
+name|rules
+argument_list|)
+expr_stmt|;
+name|checkRules
+argument_list|(
+name|makeMap
+argument_list|(
+literal|"resource"
+argument_list|,
+literal|"/replication"
+argument_list|,
+literal|"httpMethod"
+argument_list|,
+literal|"POST"
+argument_list|,
+literal|"userPrincipal"
+argument_list|,
+literal|"cio"
+argument_list|,
+literal|"collectionRequests"
+argument_list|,
+name|singletonList
+argument_list|(
+operator|new
+name|CollectionRequest
+argument_list|(
+literal|"mycoll"
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|,
+name|STATUS_OK
+argument_list|,
+name|rules
+argument_list|)
+expr_stmt|;
+name|checkRules
+argument_list|(
+name|makeMap
+argument_list|(
+literal|"resource"
+argument_list|,
+literal|"/admin/collections"
+argument_list|,
+literal|"userPrincipal"
+argument_list|,
+literal|"tim"
+argument_list|,
+literal|"requestType"
+argument_list|,
+name|AuthorizationContext
+operator|.
+name|RequestType
+operator|.
+name|ADMIN
+argument_list|,
+literal|"collectionRequests"
+argument_list|,
+literal|null
+argument_list|,
+literal|"params"
+argument_list|,
+operator|new
+name|MapSolrParams
+argument_list|(
+name|singletonMap
+argument_list|(
+literal|"action"
+argument_list|,
+literal|"CREATE"
+argument_list|)
+argument_list|)
+argument_list|)
+argument_list|,
+name|STATUS_OK
+argument_list|,
+name|rules
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|checkRules
 specifier|private
@@ -734,6 +941,49 @@ name|values
 parameter_list|,
 name|int
 name|expected
+parameter_list|)
+block|{
+name|checkRules
+argument_list|(
+name|values
+argument_list|,
+name|expected
+argument_list|,
+operator|(
+name|Map
+operator|)
+name|Utils
+operator|.
+name|fromJSONString
+argument_list|(
+name|permissions
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|checkRules
+specifier|private
+name|void
+name|checkRules
+parameter_list|(
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|values
+parameter_list|,
+name|int
+name|expected
+parameter_list|,
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|permissions
 parameter_list|)
 block|{
 name|AuthorizationContext
@@ -756,15 +1006,7 @@ name|plugin
 operator|.
 name|init
 argument_list|(
-operator|(
-name|Map
-operator|)
-name|Utils
-operator|.
-name|fromJSONString
-argument_list|(
 name|permissions
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|AuthorizationResponse
